# StripeTestTask

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  create_admin.py  pyproject.toml  requirements.txt  seed_db.sh
payments/: asgi.py  config.py  settings.py  urls.py  wsgi.py
payments/logger/: config.json  setup.py
payments/payments_app/: admin.py  models.py  services.py  tests.py  views.py
payments/payments_app/fixtures/: discounts.json  items.json  orders.json  taxes.json
payments/payments_app/migrations/: 0001_initial.py  0002_alter_item_table.py  0003_alter_item_price.py  0004_order.py  0005_discount_tax_order_discount_order_tax.py  0006_item_currency.py
payments/payments_app/templates/: base.xhtml  checkout.xhtml  item.xhtml  order.xhtml
