[project]
name = "stripetesttask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "Django==6.0",
  "stripe==14.1.0",
  "psycopg[binary]==3.3.2",
  "gunicorn==23.0.0",
  "whitenoise==6.11.0",
  "pydantic-settings==2.12.0",
  "python-dotenv==1.2.1",
]
